--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -7,12 +7,22 @@
 }
 
 .profileTextContainer {
-  padding-left: 7%;
-  padding-right: 7%;
-  margin: 5px;
+  padding: 0 7vw 0 7vw;
+  margin: 1vh 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.profileTextContainer > * {
+  margin: 1vh 0vh;
+}
+
+@media (max-width: 768px) {
+  .profileTextContainer {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .profileTitle {
