--- a/src/styles/PersonalWriteUp.module.css
+++ b/src/styles/PersonalWriteUp.module.css
@@ -41,9 +41,11 @@
   }
 
   .PersonalWriteUph1 {
+    width: 75%;
     font-size: 24px;
   }
   .PersonalWriteUpp {
+    width: 85%;
     font-size: 12px;
   }
 }
