--- a/src/styles/ImageComponent.module.css
+++ b/src/styles/ImageComponent.module.css
@@ -1,9 +1,7 @@
-.container {
+.imgContainer {
   width: 100%;
   height: 200px;
   background-color: #f5f5f5;
-  display: flex;
-  justify-content: center;
   align-items: center;
   overflow: hidden; /* This will ensure any part of the image that exceeds the container dimensions is hidden */
   padding: 8px;
