--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -14,8 +14,10 @@
 }
 
 .profileImg {
-  max-width: 50%;
-  height: auto;
+  max-width: 100%;
+  max-height: 50vh;
+  object-fit: cover; /* Cover the container without losing aspect ratio */
+  object-position: center bottom; /* Focus on the center and bottom of the image */
   display: block;
   margin: auto;
 }
@@ -95,7 +97,9 @@
 
   .profileImg {
     max-width: 100%;
-    height: auto;
+    max-height: 50vh;
+    object-fit: cover; /* Cover the container without losing aspect ratio */
+    object-position: center bottom; /* Focus on the center and bottom of the image */
     display: block;
     margin: auto;
   }
